Ensure search results feedback wraps nicely onto next line

--- a/app/assets/stylesheets/darkswarm/_shop-filters.css.scss
+++ b/app/assets/stylesheets/darkswarm/_shop-filters.css.scss
@@ -117,6 +117,7 @@
 
   .clear-all {
     color: $grey-500;
+    margin-left: 1.5em;
 
     &:hover {
       color: $grey-600;
@@ -163,10 +164,6 @@
     &.applied-search {
       font-weight: bold;
       color: $teal-500;
-    }
-
-    &.filter-label {
-      float: left;
     }
   }
 }
